Simulador De login Con (JS). DG

--- a/index.html
+++ b/index.html
@@ -13,39 +13,23 @@
     
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-
 </head>
 <body>
-
-<!-- //----------------------------- BARRA DE NAVEGACION  ------------------------------//  -->
-
-    <div>
-        <nav class="BarraNav">
-            <a class="LogoPrincipal" href="#"><img class="ImgLogo" src="images/logo.jpg" alt=""> <h5 class="textblanco" >TECH </h5> <h5>NEWS</h5></a>
-            <ul class="Nav-menu">
-                <li>
-                    <a href="">Home</a>
-                </li>
-                <li>
-                    <a href="">Web Developement  </a>
-                </li>
-                <li>
-                    <a href="">Contact</a>
-                </li>
-                <li>
-                    <a href="">Startup</a>
-                </li>
-                <li>
-                    <a href="">More</a>
-                </li>
-            </ul>        
-        </nav>
-        <hr>
-    </div>
-
+<div>
+    <nav class="BarraNav">
+        <a class="LogoPrincipal" href="#"><img class="ImgLogo" src="images/logo.jpg" alt=""> <h5>TECH</h5><h5 class="colorBlue">NEWS</h5></a>
+        <ul class="Nav-menu">
+            <li><a class="colorBlue" href="index.html">Inico</a></li>
+            <li><a href="login.html">Inicio Sesion</a></li>
+            <li><a href="register.html">Registrarse</a></li>
+            <li><a href="#">Mas</a></li>
+        </ul>     
+    </nav>
+    <hr>
+    
+</div>
 <!-- //----------------------------- SECCCION 1 ------------------------------//  -->
     <div class="Contenedor-Principal">
-
         <div class="BackImage">
             <h3>Big new Today</h3>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex, ullam hic et ducimus ea possimus cumque nesciunt reprehenderit totam. Quidem quas doloremque iure assumenda?</p>
@@ -81,13 +65,16 @@
             </div>
         </div>
 
-        <section class="BackImage2">
-            <div class="Contenedor-BackImage2">
+
+        <section class="BackImage3">
+            <div class="Contenedor-BackImage3">
                 <h2>Lorem, ipsum dolor.</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil labore cum totam ullam maxime. Accusantium, magnam soluta cum rerum quo optio sint veritatis. </p>
-                <a href="#" class="Botones">Read More</a>
+                <p>Lorem ipsum dolor sit amet consectetur. Officiis provident molestiae quidem eaque debitis aliquam optio repellendus nulla porro voluptatibus hic fuga voluptatum neque odio ex, fugit, architecto eligendi possimus.</p>
+                <a class="Botones" href="#">Learn More</a>
             </div>
         </section>
+
+
 
         <!-- //----------------------------- SECCCION 2 ------------------------------//  -->
         <div class="ContenedorCartas2">
@@ -115,39 +102,25 @@
             </div>
         </div>
 
-        <section class="BackImage3">
-            <div class="Contenedor-BackImage3">
-                <h2>Lorem, ipsum dolor.</h2>
-                <p>Lorem ipsum dolor sit amet consectetur. Officiis provident molestiae quidem eaque debitis aliquam optio repellendus nulla porro voluptatibus hic fuga voluptatum neque odio ex, fugit, architecto eligendi possimus.</p>
-                <a class="Botones" href="#">Learn More</a>
-            </div>
-        </section>
+
 
 
         <section class="social">
-
             <div class="Links">
-            <p>DAIRON GRANADA</p>
-
+                <p>DAIRON GRANADA</p>
                 <div class="iconos">
-                    <a href="https://www.facebook.com/DAIRON.CG/"> 
-                        <i class="fab fa-facebook" ></i>
-                    </a>
-                    <a href="https://github.com/dairongranada"> 
-                        <i class="fab fa-github" ></i>
-                    </a>
-                    <a href="https://www.instagram.com/dairongranadaa/"> 
-                        <i class="fab fa-instagram" ></i>
-                    </a>
+                    <a href="https://www.facebook.com/DAIRON.CG/"> <i class="fab fa-facebook" ></i></a>
+                    <a href="https://github.com/dairongranada"><i class="fab fa-github"></i></a>
+                    <a href="https://www.instagram.com/dairongranadaa/"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
         </section>
-    <!--Cierre del contenedor Principal-->
     </div>
 
 
 <!-------------JAVA SCRIPT --------------->
-    <script src="main.js" ></script>
-    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="js/scrollReveal.js" ></script>
+    <script src="js/scrollreveal.js" ></script>
+    <script src="js/animacion.js" ></script>
 </body>
 </html> 
