Simulador De login Con (JS). DG

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/css.css">
-    <title> TechNews- Dairon Granada</title>
+    <title> TechNews - Dairon Granada</title>
 
 
     <!-- Tipo De Font -->
@@ -15,20 +15,27 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 </head>
 <body>
-<div>
-    <nav class="BarraNav">
-        <a class="LogoPrincipal" href="#"><img class="ImgLogo" src="images/logo.jpg" alt=""> <h5>TECH</h5><h5 class="colorBlue">NEWS</h5></a>
-        <ul class="Nav-menu">
-            <li><a class="colorBlue" href="index.html">Inico</a></li>
+
+    <nav>
+        <div class="TextNav"><h1>LOGIN SIMULATOR</h1></div>
+        <div class="openMenu"><i class="fa fa-bars"></i></div>
+        <ul class="mainMenu">
+            <li><a href="index.html">Inico</a></li>
             <li><a href="login.html">Inicio Sesion</a></li>
             <li><a href="register.html">Registrarse</a></li>
-            <li><a href="#">Mas</a></li>
-        </ul>     
+            <li><a class="colorBlue"  href="mas.html">Mas</a></li>
+            <div class="closeMenu"><i class="fa fa-times"></i></div>
+
+            <span class="icons">
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-instagram"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-github"></i>
+            </span>
+        </ul>
     </nav>
-    <hr>
-    
-</div>
-<!-- //----------------------------- SECCCION 1 ------------------------------//  -->
+
+    <!-- //----------------------------- SECCCION 1 ------------------------------//  -->
     <div class="Contenedor-Principal">
         <div class="BackImage">
             <h3>Big new Today</h3>
@@ -39,7 +46,7 @@
         </div>
 
 
-<!-- //----------------------------- SECCCION 2 ------------------------------//  -->
+        <!-- //----------------------------- SECCCION 2 ------------------------------//  -->
         <div class="ContenedorCartas">
             <div>
                 <img src="images/imagen1.jpg" alt="">
@@ -74,8 +81,6 @@
             </div>
         </section>
 
-
-
         <!-- //----------------------------- SECCCION 2 ------------------------------//  -->
         <div class="ContenedorCartas2">
             <div>
@@ -101,20 +106,6 @@
                 <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus ad facilis ab odio dolore, repellat officiis deleniti ipsum, ea impedit </p>
             </div>
         </div>
-
-
-
-
-        <section class="social">
-            <div class="Links">
-                <p>DAIRON GRANADA</p>
-                <div class="iconos">
-                    <a href="https://www.facebook.com/DAIRON.CG/"> <i class="fab fa-facebook" ></i></a>
-                    <a href="https://github.com/dairongranada"><i class="fab fa-github"></i></a>
-                    <a href="https://www.instagram.com/dairongranadaa/"><i class="fab fa-instagram"></i></a>
-                </div>
-            </div>
-        </section>
     </div>
 
 
