--- a/register.html
+++ b/register.html
@@ -5,25 +5,30 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style/css.css">
-  <title>Registro</title>
+  <title>Register - Dairon Granada</title>
 
       <!-- Tipo De Font -->
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
     
 </head>
 <body class="bodyFomularios">
-  <div>
-    <nav class="BarraNav">
-        <a class="LogoPrincipal" href="#"><img class="ImgLogo" src="images/logo.jpg" alt=""> <h5>TECH </h5><h5 class="colorBlue">NEWS</h5></a>
-        <ul class="Nav-menu">
-            <li><a href="index.html">Inico</a></li>
-            <li><a href="login.html">Inicio Sesion</a></li>
-            <li><a class="colorBlue" href="register.html">Registrarse</a></li>
-            <li><a href="#">Mas</a></li>
-        </ul>        
-    </nav>
-    <hr>
-</div>
+  <nav>
+    <div class="TextNav"><h1>LOGIN SIMULATOR</h1></div>
+    <div class="openMenu"><i class="fa fa-bars"></i></div>
+    <ul class="mainMenu">
+        <li><a href="index.html">Inico</a></li>
+        <li><a href="login.html">Inicio Sesion</a></li>
+        <li><a href="register.html">Registrarse</a></li>
+        <li><a class="colorBlue"  href="mas.html">Mas</a></li>
+        <div class="closeMenu"><i class="fa fa-times"></i></div>
+        <span class="icons">
+            <i class="fab fa-facebook"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-github"></i>
+        </span>
+    </ul>
+</nav>
 
   <div  class="containerRegister">
     <div class="register">
@@ -56,7 +61,7 @@
         </div>
 
 
-        <button id="buttonRegister" class="button">Iniciar sesión</button>
+        <button id="buttonRegister" class="button">Registrarse</button>
         <div class= "ContenedoresDePregunta">
           <a href="#"> ¿A olvidado Su contraseña? </a>
           <a href="login.html"> ¿Ya tienes una una Cuenta? </a>
@@ -66,7 +71,7 @@
   </div>
 
   <script src="https://kit.fontawesome.com/0d35893116.js" crossorigin="anonymous"></script>
-  <script src="js/scrollReveal.js" ></script>
+  <script src="js/app.js" ></script>
   <script src="js/scrollreveal.js" ></script>
   <script src="js/animacion.js" ></script>
 </body>
