Simulador De login Con (JS). DG

--- a/index.html
+++ b/index.html
@@ -17,21 +17,14 @@
 <body>
 
     <nav>
-        <div class="TextNav"><h1>LOGIN SIMULATOR</h1></div>
+        <div class="TextNav"><a href="index.html"><h1>LOGIN SIMULATOR</h1></div></a>
         <div class="openMenu"><i class="fa fa-bars"></i></div>
         <ul class="mainMenu">
-            <li><a href="index.html">Inico</a></li>
+            <li><a href="index.html">Inicio</a></li>
             <li><a href="login.html">Inicio Sesion</a></li>
             <li><a href="register.html">Registrarse</a></li>
-            <li><a class="colorBlue"  href="mas.html">Mas</a></li>
+            <li><a class="colorBlue"  href="mas.html">Contacto</a></li>
             <div class="closeMenu"><i class="fa fa-times"></i></div>
-
-            <span class="icons">
-                <i class="fab fa-facebook"></i>
-                <i class="fab fa-instagram"></i>
-                <i class="fab fa-twitter"></i>
-                <i class="fab fa-github"></i>
-            </span>
         </ul>
     </nav>
 
@@ -47,7 +40,7 @@
 
 
         <!-- //----------------------------- SECCCION 2 ------------------------------//  -->
-        <div class="ContenedorCartas">
+        <div class="ContenedorCartas2">
             <div>
                 <img src="images/imagen1.jpg" alt="">
                 <h3>Lorem,ipsum dolor.</h3>
