--- a/mas.html
+++ b/mas.html
@@ -19,25 +19,19 @@
         <div class="TextNav"><h1>LOGIN SIMULATOR</h1></div>
         <div class="openMenu"><i class="fa fa-bars"></i></div>
         <ul class="mainMenu">
-            <li><a href="index.html">Inico</a></li>
+            <li><a href="index.html">Inicio</a></li>
             <li><a href="login.html">Inicio Sesion</a></li>
             <li><a href="register.html">Registrarse</a></li>
-            <li><a class="colorBlue"  href="mas.html">Mas</a></li>
+            <li><a class="colorBlue"  href="mas.html">Contacto</a></li>
             <div class="closeMenu"><i class="fa fa-times"></i></div>
-            <span class="icons">
-                <i class="fab fa-facebook"></i>
-                <i class="fab fa-instagram"></i>
-                <i class="fab fa-twitter"></i>
-                <i class="fab fa-github"></i>
-            </span>
         </ul>
     </nav>
     <div class="Contenedor-Principal">
         <section class="BackImage3">
             <div class="Contenedor-BackImage3">
-                <h2>Lorem, ipsum dolor.</h2>
-                <p>Lorem ipsum dolor sit amet consectetur. Officiis provident molestiae quidem eaque debitis aliquam optio repellendus nulla porro voluptatibus hic fuga voluptatum neque odio ex, fugit, architecto eligendi possimus.</p>
-                <a class="Botones" href="#">Learn More</a>
+                <h2>Gracias Por Utilizar Mi Simulador De registro</h2>
+                <p>Acá podrás ver mis redes sociales tanto, como lo que son mi Facebook y Instagram y mi repositorio donde subo todos mis diseños</p>
+                <a class="Botones" href="index.html">Volver Al Inicio</a>
             </div>
         </section>
 
