--- a/register.html
+++ b/register.html
@@ -16,17 +16,11 @@
     <div class="TextNav"><h1>LOGIN SIMULATOR</h1></div>
     <div class="openMenu"><i class="fa fa-bars"></i></div>
     <ul class="mainMenu">
-        <li><a href="index.html">Inico</a></li>
-        <li><a href="login.html">Inicio Sesion</a></li>
+      <li><a href="index.html">Inicio</a></li>
+      <li><a href="login.html">Inicio Sesion</a></li>
         <li><a href="register.html">Registrarse</a></li>
-        <li><a class="colorBlue"  href="mas.html">Mas</a></li>
+        <li><a class="colorBlue"  href="mas.html">Contacto</a></li>
         <div class="closeMenu"><i class="fa fa-times"></i></div>
-        <span class="icons">
-            <i class="fab fa-facebook"></i>
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-github"></i>
-        </span>
     </ul>
 </nav>
 
